# serve-folder

./: .gitignore  Cargo.toml  build.rs  readme.md  serve-http.sublime-project
certs/: with-empty-pw.pfx  with-pw-foobar.pfx
gen-test/: Cargo.toml
gen-test/src/: main.rs
src/: log.rs  main.rs  misc.rs  native.rs  request.rs  server.rs  stream.rs  stream_reader.rs  test_data.rs  win32.c
test-data/: svg-img.html  svg-inline.html
test-data/axure/: getting_started.html
test-data/axure/data/: document.js  styles.css
test-data/axure/files/getting_started/: data.js  styles.css
