[package]
name = "servehttp"
description = "Simple CLI server utility for hosting directories over HTTP"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.1"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
dunce = "1.0.4"
chrono = "0.4.30"
native-tls = "0.2.11"
schannel = "0.1.22"
hex = "0.4.3"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography"] }
