[package]
name = "servefolder"
description = "Simple CLI server utility for hosting directories over HTTP"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.1"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
normpath = "1.1.1"
chrono = "0.4.30"
native-tls = "0.2.11"
hex = "0.4.3"
phf = { version = "0.11", features = ["macros"] }
glob = "0.3.1"
thiserror = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security_Cryptography"] }

[dev-dependencies]
test-case = "*"
